<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/drawable_dialog">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20dp"
        android:text=""
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold"
        android:id="@+id/textViewTitulo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20dp"
        android:text="@string/dialog_title_borrar"
        android:textColor="@android:color/darker_gray"
        android:id="@+id/textView6" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_boton_no"
            android:id="@+id/buttonNo"
            android:background="@android:drawable/editbox_background"
            android:textColor="@android:color/darker_gray"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_boton_si"
            android:textStyle="bold"
            android:id="@+id/buttonSi"
            android:background="@android:drawable/editbox_background"
            android:textColor="@android:color/darker_gray"/>
    </LinearLayout>
</LinearLayout>