<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activitys.ActivityPreview"
    tools:showIn="@layout/activity_preview"
    android:orientation="vertical"
    android:background="@android:color/white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/altura_imagen"
        android:layout_weight="1"
        android:id="@+id/imageViewPreview"
        android:layout_gravity="center_horizontal" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="5dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:hint="@string/preview_tarjetas_empresa"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                android:textColorHint="@android:color/darker_gray"
                android:id="@+id/editTextEmpresa"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"/>

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:id="@+id/imageButtonEmpresa"
                android:background="@color/transparente"
                android:src="@android:drawable/ic_menu_more"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:hint="@string/preview_tarjetas_nombre"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                android:textColorHint="@android:color/darker_gray"
                android:id="@+id/editTextNombre"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"/>

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:id="@+id/imageButtonNombre"
                android:background="@color/transparente"
                android:src="@android:drawable/ic_menu_more"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:hint="@string/preview_tarjetas_correo"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                android:textColorHint="@android:color/darker_gray"
                android:id="@+id/editTextCorreo"
                android:layout_weight="1"/>

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:id="@+id/imageButtonCorreo"
                android:background="@color/transparente"
                android:src="@android:drawable/ic_menu_more"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/preview_tarjetas_telefono1"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                android:textColorHint="@android:color/darker_gray"
                android:ems="10"
                android:id="@+id/editTextTelefono1"
                android:layout_weight="1"/>

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:id="@+id/imageButtonTelefono1"
                android:background="@color/transparente"
                android:src="@android:drawable/ic_menu_more"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/preview_tarjetas_telefono2"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                android:textColorHint="@android:color/darker_gray"
                android:ems="10"
                android:id="@+id/editTextTelefono2"
                android:layout_weight="1"/>

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:id="@+id/imageButtonTelefono2"
                android:background="@color/transparente"
                android:src="@android:drawable/ic_menu_more"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preview_tarjetas_botonCancelar"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                android:id="@+id/buttonCancelar"
                android:layout_weight="1"
                android:background="@android:drawable/editbox_background"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preview_tarjetas_botonGuardar"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                android:id="@+id/buttonGuardar"
                android:layout_weight="1"
                android:background="@android:drawable/editbox_background"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
