<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="15dp"
    android:layout_marginLeft="15dp"
    android:layout_marginBottom="8dp"
    android:id="@+id/cardViewTarjetas"
    card_view:cardCornerRadius="@dimen/cardview_default_radius"
    card_view:cardElevation="@dimen/cardview_default_elevation"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewCaptura"
            android:layout_width="match_parent"
            android:layout_height="@dimen/altura_imagen" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:paddingBottom="8dp"
                    android:text="@string/layout_item_empresa"
                    android:textStyle="bold"
                    android:textSize="15dp"/>

                <TextView
                    android:id="@+id/textViewEmpresa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text=""
                    android:textSize="15dp"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:paddingBottom="8dp"
                    android:text="@string/layout_item_nombre"
                    android:textStyle="bold"
                    android:textSize="15dp"/>

                <TextView
                    android:id="@+id/textViewNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text=""
                    android:textSize="15dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:paddingBottom="8dp"
                    android:text="@string/layout_item_correo"
                    android:textStyle="bold"
                    android:textSize="15dp"/>

                <TextView
                    android:id="@+id/textViewCorreo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text=""
                    android:textSize="15dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:paddingBottom="8dp"
                    android:text="@string/layout_item_telefono1"
                    android:textStyle="bold"
                    android:textSize="15dp"/>

                <TextView
                    android:id="@+id/textViewTelefono1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text=""
                    android:textSize="15dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:paddingBottom="8dp"
                    android:text="@string/layout_item_telefono2"
                    android:textStyle="bold"
                    android:textSize="15dp"/>

                <TextView
                    android:id="@+id/textViewTelefono2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text=""
                    android:textSize="15dp"/>
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>